--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.koushikdutta.async:androidasync:2.+'
+    implementation 'com.koushikdutta.ion:ion:2.1.6'
 }
